# freeipc

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  common.c  common.h  freeipc_config.h  freertos_multiple_tasks.c  linux_multiple_tasks.c  linux_single_task.c  log.c
include/: freeipc.h  freeipc_assert.h  freeipc_defs.h  freeipc_enums.h  freeipc_hal.h  freeipc_internal.h  freeipc_log.h  freeipc_structs.h  freeipc_types.h
src/: ipc_get_time.c  ipc_hal.c  ipc_init.c  ipc_node_control.c  ipc_node_notify.c  ipc_node_register.c  ipc_node_request.c  ipc_node_response.c  ipc_node_service.c  ipc_service.c  ipc_utils.c
src/hal/: freertos.c  linux.c  linux_no_threads.c  linux_threads.c
test/: CMakeLists.txt  freeipc_config.h  main.cpp
test/mocks/: ipc_hal_mocks.hpp
test/tests/: CMakeLists.txt  test_ipc_init.cpp
